--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
                       <!doctype html>
                       <html lang="en">
-                      <head>
-                        <meta charset="utf-8" />
-                        <meta name="viewport" content="width=device-width,initial-scale=1" />
-                        <title>NEPALI BAZAR — Home</title>
-                        <link rel="stylesheet" href="css/styles.css" />
-                        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-                        <meta name="description" content="Nepali Bazar - local marketplace for students, workers and everyone." />
-                      </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nepali Bazar</title>
+  <link rel="stylesheet" href="style.css">
+</head>
                       <body>
                         <div id="app-root">
                           <!-- Header will be injected by app.js -->
