--- a/index.html
+++ b/index.html
@@ -1,65 +1,73 @@
-                      <!doctype html>
-                      <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nepali Bazar</title>
-<link rel="stylesheet" href="css/style.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="js/config.js"></script>
 </head>
-                      <body>
-                        <div id="app-root">
-                          <!-- Header will be injected by app.js -->
-                          <header id="site-header" class="site-header container"></header>
+<body class="bg-gray-50 text-gray-900">
 
-                          <main class="container main-content">
-                            <section class="hero">
-                              <div class="hero-left">
-                                <h1 id="hero-title">Buy & Sell in your city — fast & local</h1>
-                                <p class="muted">A beautiful marketplace for students, workers & everyone. Buy second-hand, sell your stuff, or find local services.</p>
-                                <div class="hero-actions">
-                                  <a class="btn btn-primary" href="products.html">Browse Products</a>
-                                  <a class="btn" href="sell.html">Sell an Item</a>
-                                </div>
-                              </div>
-                              <div class="hero-right">
-                                <img src="assets/images/hero-placeholder.jpg" alt="Marketplace" class="hero-image" />
-                              </div>
-                            </section>
+  <!-- Navbar -->
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-blue-600" id="site-name">Nepali Bazar</h1>
+      <nav class="space-x-6">
+        <a href="index.html" class="hover:text-blue-600">Home</a>
+        <a href="products.html" class="hover:text-blue-600">Products</a>
+        <a href="sell.html" class="hover:text-blue-600">Sell</a>
+        <a href="login.html" class="hover:text-blue-600">Login</a>
+      </nav>
+    </div>
+  </header>
 
-                            <section class="section">
-                              <div class="section-head">
-                                <h2>Popular near you</h2>
-                                <div class="section-actions">
-                                  <input id="search-home" class="input search" placeholder="Search items (e.g., phone, bicycle, books)" />
-                                </div>
-                              </div>
+  <!-- Hero Section -->
+  <section class="bg-gradient-to-r from-blue-500 to-indigo-600 text-white py-20">
+    <div class="max-w-4xl mx-auto text-center">
+      <h2 class="text-4xl font-extrabold mb-4">Buy & Sell in your city — fast & local</h2>
+      <p class="text-lg mb-6">A beautiful marketplace for students, workers & everyone. Buy second-hand, sell your stuff, or find local services.</p>
+      <a href="products.html" class="bg-white text-blue-600 px-6 py-3 rounded-lg shadow font-semibold">Browse Products</a>
+      <a href="sell.html" class="ml-4 bg-yellow-400 text-gray-900 px-6 py-3 rounded-lg shadow font-semibold">Sell an Item</a>
+    </div>
+  </section>
 
-                              <div id="home-products" class="product-grid" aria-live="polite"></div>
-                              <div class="center"><a href="products.html" class="link">See all products</a></div>
-                            </section>
+  <!-- Popular Products -->
+  <section class="max-w-7xl mx-auto px-6 py-12">
+    <h3 class="text-2xl font-bold mb-6">Popular near you</h3>
 
-                            <section class="section features">
-                              <div class="feature-card">
-                                <svg class="icon"><use href="assets/icons.svg#shield"/></svg>
-                                <h3>Safe & Local</h3>
-                                <p class="muted">Meet locally and pay securely.</p>
-                              </div>
-                              <div class="feature-card">
-                                <svg class="icon"><use href="assets/icons.svg#price-tag"/></svg>
-                                <h3>Best Prices</h3>
-                                <p class="muted">Second-hand treasures at great prices.</p>
-                              </div>
-                              <div class="feature-card">
-                                <svg class="icon"><use href="assets/icons.svg#bolt"/></svg>
-                                <h3>Fast Listing</h3>
-                                <p class="muted">Create listings in under a minute.</p>
-                              </div>
-                            </section>
-                          </main>
+    <!-- Product Grid -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8" id="product-grid">
+      <!-- Sample Product Card -->
+      <div class="bg-white rounded-lg shadow hover:shadow-lg transition p-4">
+        <img src="assets/images/sample1.jpg" alt="Product" class="w-full h-40 object-cover rounded-md">
+        <h4 class="mt-4 text-lg font-semibold">Laptop</h4>
+        <p class="text-gray-500">Rs. 45,000</p>
+        <a href="product.html" class="mt-3 inline-block bg-blue-600 text-white px-4 py-2 rounded-lg text-sm">View</a>
+      </div>
 
-                          <footer class="site-footer container" id="site-footer"></footer>
-                        </div>
+      <div class="bg-white rounded-lg shadow hover:shadow-lg transition p-4">
+        <img src="assets/images/sample2.jpg" alt="Product" class="w-full h-40 object-cover rounded-md">
+        <h4 class="mt-4 text-lg font-semibold">Bike</h4>
+        <p class="text-gray-500">Rs. 85,000</p>
+        <a href="product.html" class="mt-3 inline-block bg-blue-600 text-white px-4 py-2 rounded-lg text-sm">View</a>
+      </div>
+    </div>
+  </section>
 
-                        <script type="module" src="js/app.js"></script>
-                      </body>
-                      </html>
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-gray-300 py-8 mt-12">
+    <div class="max-w-7xl mx-auto px-6 text-center">
+      <p>&copy; <span id="year"></span> <span id="site-name-footer">Nepali Bazar</span>. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script>
+    // Update year
+    document.getElementById("year").textContent = new Date().getFullYear();
+    // Update site name everywhere
+    document.getElementById("site-name").textContent = SITE_NAME;
+    document.getElementById("site-name-footer").textContent = SITE_NAME;
+  </script>
+</body>
+</html>
