--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/styles.css">
 
-  <!-- Single source of truth config (change SITE_NAME only here) -->
   <script src="js/config.js"></script>
-  <!-- Product defaults + localStorage merging -->
   <script src="js/product-data.js"></script>
 </head>
 <body class="dark-bg">
@@ -33,7 +31,10 @@
         <input id="global-search" placeholder="Search items, e.g., bike, phone" class="search-input" />
         <a href="products.html" class="nav-link">Products</a>
         <a href="sell.html" class="nav-link cta">Sell</a>
-        <a href="login.html" class="nav-link">Login</a>
+        <a href="login.html" id="login-link" class="nav-link">Login</a>
+        <span id="user-info" class="nav-link" style="display:none;">
+          <span id="username-display"></span> | <a href="#" id="logout-btn">Logout</a>
+        </span>
       </nav>
     </div>
   </header>
@@ -103,12 +104,33 @@
     </div>
   </footer>
 
-  <!-- Main app script -->
   <script src="js/app.js"></script>
   <script>
     // small page-specific DOM updates
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+
+    // Logged-in state
+    const loggedUser = localStorage.getItem("nb_logged_in_user");
+    const loginLink = document.getElementById("login-link");
+    const userInfo = document.getElementById("user-info");
+    const usernameDisplay = document.getElementById("username-display");
+    const logoutBtn = document.getElementById("logout-btn");
+
+    if(loggedUser){
+      loginLink.style.display = "none";
+      userInfo.style.display = "inline";
+      usernameDisplay.textContent = loggedUser;
+    } else {
+      loginLink.style.display = "inline";
+      userInfo.style.display = "none";
+    }
+
+    logoutBtn.addEventListener("click", function(e){
+      e.preventDefault();
+      localStorage.removeItem("nb_logged_in_user");
+      location.reload();
+    });
   </script>
 </body>
 </html>
