--- a/login.html
+++ b/login.html
@@ -33,10 +33,10 @@
       <h2>Login</h2>
       <form id="login-form" class="form-grid">
         <label>Username
-          <input name="username" placeholder="sohaum" class="input" required />
+          <input name="username" placeholder="Username" class="input" required />
         </label>
         <label>Password
-          <input name="password" type="password" placeholder="sohaum" class="input" required />
+          <input name="password" type="password" placeholder="Password" class="input" required />
         </label>
         <div class="form-actions">
           <button class="btn btn-primary" type="submit">Sign in</button>
