--- a/sell.html
+++ b/sell.html
@@ -10,13 +10,6 @@
   <script src="js/product-data.js"></script>
 </head>
 <body class="dark-bg">
-  <script>
-    // Redirect to login if not logged in
-    const loggedUser = localStorage.getItem("nb_logged_in_user");
-    if(!loggedUser) {
-      window.location.href = "login.html";
-    }
-  </script>
 
   <header class="site-header">
     <div class="container header-inner">
@@ -102,29 +95,34 @@
 
   <script src="js/app.js"></script>
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+    document.addEventListener("DOMContentLoaded", function(){
+      // Check login
+      const loggedUser = localStorage.getItem("nb_logged_in_user");
+      if(!loggedUser){
+        alert("You must log in as 'sohaum' to post a listing!");
+        window.location.href = "login.html";
+        return;
+      }
 
-    // Logged-in nav handling
-    const loginLink = document.getElementById("login-link");
-    const userInfo = document.getElementById("user-info");
-    const usernameDisplay = document.getElementById("username-display");
-    const logoutBtn = document.getElementById("logout-btn");
+      // Update nav links
+      const loginLink = document.getElementById("login-link");
+      const userInfo = document.getElementById("user-info");
+      const usernameDisplay = document.getElementById("username-display");
+      const logoutBtn = document.getElementById("logout-btn");
 
-    if(loggedUser){
       loginLink.style.display = "none";
       userInfo.style.display = "inline";
       usernameDisplay.textContent = loggedUser;
-    } else {
-      loginLink.style.display = "inline";
-      userInfo.style.display = "none";
-    }
 
-    // Logout functionality
-    logoutBtn.addEventListener("click", function(e){
-      e.preventDefault();
-      localStorage.removeItem("nb_logged_in_user");
-      location.href = "login.html";
+      logoutBtn.addEventListener("click", function(e){
+        e.preventDefault();
+        localStorage.removeItem("nb_logged_in_user");
+        window.location.href = "login.html";
+      });
+
+      // Update year and site name
+      document.getElementById('year').textContent = new Date().getFullYear();
+      document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
     });
   </script>
 </body>
