--- a/products.html
+++ b/products.html
@@ -102,6 +102,41 @@
       localStorage.removeItem("nb_logged_in_user");
       location.reload();
     });
+
+    // --- Render products with delete button only for sohaum ---
+    const productsGrid = document.getElementById("products-grid");
+
+    function renderProducts() {
+      productsGrid.innerHTML = ""; // Clear current grid
+      products.forEach(product => {
+        const card = document.createElement("div");
+        card.className = "product-card";
+
+        card.innerHTML = `
+          <img src="${product.image || 'assets/images/placeholder.jpg'}" alt="product image">
+          <h3>${product.title}</h3>
+          <p>Price: Rs. ${product.price}</p>
+          <p>Seller: ${product.seller}</p>
+          <p>Location: ${product.location}</p>
+          <p>${product.description}</p>
+          ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+        `;
+
+        // Add delete functionality for sohaum only
+        if(loggedUser === "sohaum") {
+          card.querySelector(".delete-btn").addEventListener("click", () => {
+            if(confirm("Are you sure you want to delete this listing?")){
+              products = products.filter(p => p.id !== product.id);
+              renderProducts();
+            }
+          });
+        }
+
+        productsGrid.appendChild(card);
+      });
+    }
+
+    renderProducts();
   </script>
 </body>
 </html>
