--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
 
   <script src="js/app.js"></script>
   <script>
-    // small page-specific DOM updates
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
@@ -131,6 +130,40 @@
       localStorage.removeItem("nb_logged_in_user");
       location.reload();
     });
+
+    // --- Render latest listings with delete button for sohaum only ---
+    const homeGrid = document.getElementById("home-grid");
+
+    function renderHomeListings() {
+      homeGrid.innerHTML = ""; // clear previous
+      products.forEach(product => {
+        const card = document.createElement("div");
+        card.className = "product-card";
+
+        card.innerHTML = `
+          <img src="${product.image || 'assets/images/placeholder.jpg'}" alt="product image">
+          <h3>${product.title}</h3>
+          <p>Price: Rs. ${product.price}</p>
+          <p>Seller: ${product.seller}</p>
+          <p>Location: ${product.location}</p>
+          <p>${product.description}</p>
+          ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+        `;
+
+        if(loggedUser === "sohaum") {
+          card.querySelector(".delete-btn").addEventListener("click", () => {
+            if(confirm("Are you sure you want to delete this listing?")){
+              products = products.filter(p => p.id !== product.id);
+              renderHomeListings();
+            }
+          });
+        }
+
+        homeGrid.appendChild(card);
+      });
+    }
+
+    renderHomeListings();
   </script>
 </body>
 </html>
