--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       location.reload();
     });
 
-    // --- Render latest listings with delete button for sohaum only ---
+    // --- Render latest listings with delete button for Sohaum only ---
     const homeGrid = document.getElementById("home-grid");
 
     function renderHomeListings() {
