--- a/products.html
+++ b/products.html
@@ -78,6 +78,7 @@
 
   <script src="js/app.js"></script>
   <script>
+    // Set year and site name
     document.getElementById('year').textContent = new Date().getFullYear();
     document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
@@ -103,7 +104,7 @@
       location.reload();
     });
 
-    // --- Render products with delete button only for sohaum ---
+    // --- Render products with delete button for Sohaum only ---
     const productsGrid = document.getElementById("products-grid");
 
     function renderProducts() {
@@ -122,7 +123,6 @@
           ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
         `;
 
-        // Add delete functionality for sohaum only
         if(loggedUser === "sohaum") {
           card.querySelector(".delete-btn").addEventListener("click", () => {
             if(confirm("Are you sure you want to delete this listing?")){
