--- a/index.html
+++ b/index.html
@@ -105,65 +105,81 @@
   </footer>
 
   <script src="js/app.js"></script>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-    document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+  document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
-    // Logged-in state
-    const loggedUser = localStorage.getItem("nb_logged_in_user");
-    const loginLink = document.getElementById("login-link");
-    const userInfo = document.getElementById("user-info");
-    const usernameDisplay = document.getElementById("username-display");
-    const logoutBtn = document.getElementById("logout-btn");
+  // Logged-in state
+  const loggedUser = localStorage.getItem("nb_logged_in_user");
+  const loginLink = document.getElementById("login-link");
+  const userInfo = document.getElementById("user-info");
+  const usernameDisplay = document.getElementById("username-display");
+  const logoutBtn = document.getElementById("logout-btn");
 
-    if(loggedUser){
-      loginLink.style.display = "none";
-      userInfo.style.display = "inline";
-      usernameDisplay.textContent = loggedUser;
-    } else {
-      loginLink.style.display = "inline";
-      userInfo.style.display = "none";
+  if(loggedUser){
+    loginLink.style.display = "none";
+    userInfo.style.display = "inline";
+    usernameDisplay.textContent = loggedUser;
+  } else {
+    loginLink.style.display = "inline";
+    userInfo.style.display = "none";
+  }
+
+  logoutBtn.addEventListener("click", function(e){
+    e.preventDefault();
+    localStorage.removeItem("nb_logged_in_user");
+    location.reload();
+  });
+
+  // --- Render latest listings with delete button for Sohaum only ---
+  const homeGrid = document.getElementById("home-grid");
+
+  // Use global products array from product-data.js
+  let products = window.NB_PRODUCTS || [];
+
+  // Save to localStorage function
+  function saveProducts() {
+    window.NB_PRODUCTS = products;
+    try {
+      localStorage.setItem(window.LOCAL_STORAGE_KEY || "nb_products_v1", JSON.stringify(products));
+    } catch(e) {
+      console.warn("Failed saving products", e);
     }
+  }
 
-    logoutBtn.addEventListener("click", function(e){
-      e.preventDefault();
-      localStorage.removeItem("nb_logged_in_user");
-      location.reload();
+  function renderHomeListings() {
+    homeGrid.innerHTML = ""; // clear previous
+    products.forEach(product => {
+      const card = document.createElement("div");
+      card.className = "product-card";
+
+      card.innerHTML = `
+        <img src="${product.images && product.images[0] ? product.images[0] : 'assets/images/placeholder.jpg'}" alt="product image">
+        <h3>${product.title}</h3>
+        <p>Price: Rs. ${product.price}</p>
+        <p>Seller: ${product.seller}</p>
+        <p>Location: ${product.location}</p>
+        <p>${product.description}</p>
+        ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+      `;
+
+      // Add delete functionality for Sohaum only
+      if(loggedUser === "sohaum") {
+        card.querySelector(".delete-btn").addEventListener("click", () => {
+          if(confirm("Are you sure you want to delete this listing?")){
+            products = products.filter(p => p.id !== product.id);
+            saveProducts();
+            renderHomeListings();
+          }
+        });
+      }
+
+      homeGrid.appendChild(card);
     });
+  }
 
-    // --- Render latest listings with delete button for Sohaum only ---
-    const homeGrid = document.getElementById("home-grid");
+  renderHomeListings();
+</script>
 
-    function renderHomeListings() {
-      homeGrid.innerHTML = ""; // clear previous
-      products.forEach(product => {
-        const card = document.createElement("div");
-        card.className = "product-card";
-
-        card.innerHTML = `
-          <img src="${product.image || 'assets/images/placeholder.jpg'}" alt="product image">
-          <h3>${product.title}</h3>
-          <p>Price: Rs. ${product.price}</p>
-          <p>Seller: ${product.seller}</p>
-          <p>Location: ${product.location}</p>
-          <p>${product.description}</p>
-          ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
-        `;
-
-        if(loggedUser === "sohaum") {
-          card.querySelector(".delete-btn").addEventListener("click", () => {
-            if(confirm("Are you sure you want to delete this listing?")){
-              products = products.filter(p => p.id !== product.id);
-              renderHomeListings();
-            }
-          });
-        }
-
-        homeGrid.appendChild(card);
-      });
-    }
-
-    renderHomeListings();
-  </script>
 </body>
 </html>
