--- a/index.html
+++ b/index.html
@@ -106,6 +106,48 @@
 
   <script src="js/app.js"></script>
 <script>
+  // Use the correct global array
+let products = window.NB_PRODUCTS || [];
+
+// --- Render latest listings with delete button for Sohaum only ---
+const homeGrid = document.getElementById("home-grid");
+
+function renderHomeListings() {
+  homeGrid.innerHTML = ""; // clear previous
+  products.forEach(product => {
+    const card = document.createElement("div");
+    card.className = "product-card";
+
+    card.innerHTML = `
+      <img src="${product.images?.[0] || 'assets/images/placeholder.jpg'}" alt="product image">
+      <h3>${product.title}</h3>
+      <p>Price: Rs. ${product.price}</p>
+      <p>Seller: ${product.seller}</p>
+      <p>Location: ${product.location}</p>
+      <p>${product.description}</p>
+      ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
+    `;
+
+    if(loggedUser === "sohaum") {
+      const btn = card.querySelector(".delete-btn");
+      if(btn) {
+        btn.addEventListener("click", () => {
+          if(confirm("Are you sure you want to delete this listing?")) {
+            products = products.filter(p => p.id !== product.id);
+            window.NB_PRODUCTS = products; // update global
+            localStorage.setItem("nb_products_v1", JSON.stringify(products)); // persist
+            renderHomeListings();
+          }
+        });
+      }
+    }
+
+    homeGrid.appendChild(card);
+  });
+}
+
+renderHomeListings();
+
   document.getElementById('year').textContent = new Date().getFullYear();
   document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
