--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <div class="section-head">
         <h2>Latest Listings</h2>
         <div class="controls">
-          <select id="filter-cat" class="select"></select>
-          <select id="sort-by" class="select">
+          <select id="filter-category" class="select"></select>
+          <select id="filter-sort" class="select">
             <option value="new">Newest</option>
             <option value="price-asc">Price: Low → High</option>
             <option value="price-desc">Price: High → Low</option>
@@ -81,13 +81,8 @@
     </section>
 
     <aside class="sidebar">
-      <div class="ad-slot">
-        <img src="assets/images/ad1.jpg" alt="Ad 1" onerror="this.style.display='none'"/>
-      </div>
-
-      <div class="ad-slot small">
-        <img src="assets/images/ad2.jpg" alt="Ad 2" onerror="this.style.display='none'"/>
-      </div>
+      <div class="ad-slot"></div>
+      <div class="ad-slot small"></div>
 
       <div class="sidebar-card">
         <h3>Post quickly</h3>
@@ -105,124 +100,31 @@
   </footer>
 
   <script src="js/app.js"></script>
-<script>
-  // Use the correct global array
-let products = window.NB_PRODUCTS || [];
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+    document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
 
-// --- Render latest listings with delete button for Sohaum only ---
-const homeGrid = document.getElementById("home-grid");
+    // Logged-in state
+    const loggedUser = localStorage.getItem("nb_logged_in_user");
+    const loginLink = document.getElementById("login-link");
+    const userInfo = document.getElementById("user-info");
+    const usernameDisplay = document.getElementById("username-display");
+    const logoutBtn = document.getElementById("logout-btn");
 
-function renderHomeListings() {
-  homeGrid.innerHTML = ""; // clear previous
-  products.forEach(product => {
-    const card = document.createElement("div");
-    card.className = "product-card";
-
-    card.innerHTML = `
-      <img src="${product.images?.[0] || 'assets/images/placeholder.jpg'}" alt="product image">
-      <h3>${product.title}</h3>
-      <p>Price: Rs. ${product.price}</p>
-      <p>Seller: ${product.seller}</p>
-      <p>Location: ${product.location}</p>
-      <p>${product.description}</p>
-      ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
-    `;
-
-    if(loggedUser === "sohaum") {
-      const btn = card.querySelector(".delete-btn");
-      if(btn) {
-        btn.addEventListener("click", () => {
-          if(confirm("Are you sure you want to delete this listing?")) {
-            products = products.filter(p => p.id !== product.id);
-            window.NB_PRODUCTS = products; // update global
-            localStorage.setItem("nb_products_v1", JSON.stringify(products)); // persist
-            renderHomeListings();
-          }
-        });
-      }
+    if(loggedUser){
+      loginLink.style.display = "none";
+      userInfo.style.display = "inline";
+      usernameDisplay.textContent = loggedUser;
+    } else {
+      loginLink.style.display = "inline";
+      userInfo.style.display = "none";
     }
 
-    homeGrid.appendChild(card);
-  });
-}
-
-renderHomeListings();
-
-  document.getElementById('year').textContent = new Date().getFullYear();
-  document.querySelectorAll('.site-name').forEach(el => el.textContent = window.SITE_NAME || 'NEPALI BAZAR');
-
-  // Logged-in state
-  const loggedUser = localStorage.getItem("nb_logged_in_user");
-  const loginLink = document.getElementById("login-link");
-  const userInfo = document.getElementById("user-info");
-  const usernameDisplay = document.getElementById("username-display");
-  const logoutBtn = document.getElementById("logout-btn");
-
-  if(loggedUser){
-    loginLink.style.display = "none";
-    userInfo.style.display = "inline";
-    usernameDisplay.textContent = loggedUser;
-  } else {
-    loginLink.style.display = "inline";
-    userInfo.style.display = "none";
-  }
-
-  logoutBtn.addEventListener("click", function(e){
-    e.preventDefault();
-    localStorage.removeItem("nb_logged_in_user");
-    location.reload();
-  });
-
-  // --- Render latest listings with delete button for Sohaum only ---
-  const homeGrid = document.getElementById("home-grid");
-
-  // Use global products array from product-data.js
-  let products = window.NB_PRODUCTS || [];
-
-  // Save to localStorage function
-  function saveProducts() {
-    window.NB_PRODUCTS = products;
-    try {
-      localStorage.setItem(window.LOCAL_STORAGE_KEY || "nb_products_v1", JSON.stringify(products));
-    } catch(e) {
-      console.warn("Failed saving products", e);
-    }
-  }
-
-  function renderHomeListings() {
-    homeGrid.innerHTML = ""; // clear previous
-    products.forEach(product => {
-      const card = document.createElement("div");
-      card.className = "product-card";
-
-      card.innerHTML = `
-        <img src="${product.images && product.images[0] ? product.images[0] : 'assets/images/placeholder.jpg'}" alt="product image">
-        <h3>${product.title}</h3>
-        <p>Price: Rs. ${product.price}</p>
-        <p>Seller: ${product.seller}</p>
-        <p>Location: ${product.location}</p>
-        <p>${product.description}</p>
-        ${loggedUser === "sohaum" ? '<button class="delete-btn">Delete</button>' : ''}
-      `;
-
-      // Add delete functionality for Sohaum only
-      if(loggedUser === "sohaum") {
-        card.querySelector(".delete-btn").addEventListener("click", () => {
-          if(confirm("Are you sure you want to delete this listing?")){
-            products = products.filter(p => p.id !== product.id);
-            saveProducts();
-            renderHomeListings();
-          }
-        });
-      }
-
-      homeGrid.appendChild(card);
+    logoutBtn.addEventListener("click", function(e){
+      e.preventDefault();
+      localStorage.removeItem("nb_logged_in_user");
+      location.reload();
     });
-  }
-
-  renderHomeListings();
-</script>
-
-  <script src="js/nb-fixes.js"></script>
+  </script>
 </body>
 </html>
