--- a/products.html
+++ b/products.html
@@ -62,12 +62,10 @@
     </section>
 
     <aside class="sidebar">
-      <div class="ad-slot tall">
-        <img id="ad-slot-1" src="assets/images/ad1.jpg" alt="Ad 1" onerror="this.style.display='none'"/>
-      </div>
-      <div class="ad-slot small">
-        <img id="ad-slot-2" src="assets/images/ad2.jpg" alt="Ad 2" onerror="this.style.display='none'"/>
-      </div>
+      <!-- ads injected by app.js -->
+      <div class="ad-slot tall"></div>
+      <div class="ad-slot small"></div>
+
       <div class="sidebar-card">
         <h3>Why list here?</h3>
         <ul class="muted small">
