--- a/index.html
+++ b/index.html
@@ -11,18 +11,6 @@
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/styles.css">
 
-  <style>
-    /* Force white text for dark theme */
-    body, .card, .btn, .select, .muted, .title, .meta, .hero, .hero-sub, .sidebar, .site-footer {
-      color: #fff !important;
-    }
-    input, select, textarea {
-      background: #111;
-      color: #fff !important;
-      border: 1px solid #444;
-    }
-  </style>
-
   <script src="js/config.js"></script>
   <script src="js/product-data.js"></script>
 </head>
@@ -95,6 +83,7 @@
     </section>
 
     <aside class="sidebar">
+      <!-- ads will be injected by app.js -->
       <div class="ad-slot"></div>
       <div class="ad-slot small"></div>
 
@@ -113,6 +102,14 @@
       <div class="muted">Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a></div>
     </div>
   </footer>
+
+  <!-- Modal -->
+  <div id="nb-modal" class="nb-modal">
+    <div class="nb-modal-content">
+      <button class="nb-modal-close">✕</button>
+      <div id="nb-modal-body"></div>
+    </div>
+  </div>
 
   <!-- Scripts -->
   <script src="js/app.js"></script>
@@ -155,11 +152,30 @@
       });
     }
 
-    // Filter dropdowns → refresh grid
-    const catSel = document.getElementById("filter-category");
-    const sortSel = document.getElementById("filter-sort");
-    if(catSel) catSel.addEventListener("change", ()=>{ if(window.renderProductsPage) window.renderProductsPage(); });
-    if(sortSel) sortSel.addEventListener("change", ()=>{ if(window.renderProductsPage) window.renderProductsPage(); });
+    // Populate category filter (fixed backticks)
+    const catSelect = document.getElementById("filter-category");
+    if (catSelect && window.NB_PRODUCTS) {
+      const categories = [...new Set(window.NB_PRODUCTS.map(p => p.category))];
+      catSelect.innerHTML = `<option value="">All Categories</option>` +
+        categories.map(c => `<option value="${c}">${c}</option>`).join("");
+    }
+
+    // Modal open/close logic
+    const modal = document.getElementById("nb-modal");
+    const modalBody = document.getElementById("nb-modal-body");
+    const modalClose = modal.querySelector(".nb-modal-close");
+
+    window.NB_OPEN_MODAL = (html) => {
+      modalBody.innerHTML = html;
+      modal.style.display = "flex";
+    };
+    function closeModal(){
+      modal.style.display = "none";
+      modalBody.innerHTML = "";
+    }
+    modalClose.addEventListener("click", closeModal);
+    modal.addEventListener("click", e => { if(e.target === modal) closeModal(); });
+    document.addEventListener("keydown", e => { if(e.key === "Escape") closeModal(); });
   </script>
 </body>
 </html>
