--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="logo">NB</div>
         <div class="brand-text">
           <div class="brand-title"><span class="site-name">NEPALI BAZAR</span></div>
-          <div class="brand-sub">Local Marketplace — Game Mode</div>
+          <div class="brand-sub">Local Marketplace</div>
         </div>
       </a>
 
