--- a/index.html
+++ b/index.html
@@ -68,11 +68,6 @@
         <h2>Latest Listings</h2>
         <div class="controls">
           <select id="filter-category" class="select"></select>
-          <select id="filter-sort" class="select">
-            <option value="new">Newest</option>
-            <option value="price-asc">Price: Low → High</option>
-            <option value="price-desc">Price: High → Low</option>
-          </select>
         </div>
       </div>
 
@@ -98,7 +93,7 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <div>© <span id="year"></span> <span class="site-name"></span>. Made with ❤️ in Nepal.</div>
+      <div>© <span id="year"></span> <span class="site-name"></span>. Made by Sohaum Mainali - YJ</div>
       <div class="muted">Contact: <a href="mailto:help@nepalibazar.test">help@nepalibazar.test</a></div>
     </div>
   </footer>
