--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
   <main class="container main-grid">
     <section class="content">
       <div class="section-head">
-        <h2>Your Listings</h2>
+        <h2>Profile - Your Listings </h2>
         <div class="controls">
           <a class="btn btn-primary" href="sell.html">Create Listing</a>
         </div>
