--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     </div>
   </header>
 
-  <!-- Animated hero -->
+  <!-- Hero: Pinned Ad -->
   <section class="hero">
     <div class="hero-overlay"></div>
     <div class="container hero-inner">
       <div class="hero-left">
         <h1 class="hero-title"><span class="accent site-name">NEPALI BAZAR</span><br>Buy • Sell • Connect — Locally</h1>
-        <p class="hero-sub">A neon-lit marketplace for students, workers & creators. Upload your item, add contact details and photos — buyers contact you directly.</p>
+        <p class="hero-sub">A neon-lit marketplace for students, workers & creators. Upload your item, add photos — buyers contact you directly.</p>
         <div class="hero-cta">
           <a class="btn btn-primary" href="products.html">Browse Items</a>
           <a class="btn btn-ghost" href="sell.html">List an Item</a>
@@ -53,10 +53,8 @@
       </div>
 
       <div class="hero-right">
-        <div class="hero-card neon-card">
-          <img src="assets/images/hero-1.jpg" alt="hero image" onerror="this.style.display='none'"/>
-          <div class="meta">Featured: Gaming Laptop — Rs. 85,000</div>
-        </div>
+        <!-- dynamically injected pinned ad -->
+        <div id="pinned-hero"></div>
       </div>
     </div>
   </section>
@@ -84,7 +82,7 @@
 
       <div class="sidebar-card">
         <h3>Post quickly</h3>
-        <p class="muted">List your item in under a minute. Add photos & contact details so buyers can reach you directly.</p>
+        <p class="muted">List your item in under a minute. Add photos so buyers can reach you directly.</p>
         <a class="btn btn-primary" href="sell.html">Create Listing</a>
       </div>
     </aside>
@@ -147,7 +145,7 @@
       });
     }
 
-    // Populate category filter (fixed backticks)
+    // Populate category filter
     const catSelect = document.getElementById("filter-category");
     if (catSelect && window.NB_PRODUCTS) {
       const categories = [...new Set(window.NB_PRODUCTS.map(p => p.category))];
