--- a/index.html
+++ b/index.html
@@ -39,23 +39,11 @@
     </div>
   </header>
 
-  <!-- Hero: Pinned Ad -->
+  <!-- Hero section with pinned ad -->
   <section class="hero">
     <div class="hero-overlay"></div>
-    <div class="container hero-inner">
-      <div class="hero-left">
-        <h1 class="hero-title"><span class="accent site-name">NEPALI BAZAR</span><br>Buy • Sell • Connect — Locally</h1>
-        <p class="hero-sub">A neon-lit marketplace for students, workers & creators. Upload your item, add photos — buyers contact you directly.</p>
-        <div class="hero-cta">
-          <a class="btn btn-primary" href="products.html">Browse Items</a>
-          <a class="btn btn-ghost" href="sell.html">List an Item</a>
-        </div>
-      </div>
-
-      <div class="hero-right">
-        <!-- dynamically injected pinned ad -->
-        <div id="pinned-hero"></div>
-      </div>
+    <div class="container hero-inner" id="hero-head">
+      <!-- Dynamic pinned ad will be injected here by app.js -->
     </div>
   </section>
 
@@ -82,7 +70,7 @@
 
       <div class="sidebar-card">
         <h3>Post quickly</h3>
-        <p class="muted">List your item in under a minute. Add photos so buyers can reach you directly.</p>
+        <p class="muted">List your item in under a minute. Add photos & contact details so buyers can reach you directly.</p>
         <a class="btn btn-primary" href="sell.html">Create Listing</a>
       </div>
     </aside>
