--- a/index.html
+++ b/index.html
@@ -42,10 +42,18 @@
   <!-- Hero section with pinned ad -->
   <section class="hero">
     <div class="hero-overlay"></div>
-    <div class="container hero-inner" id="hero-head">
-      <!-- Dynamic pinned ad will be injected here by app.js -->
+    <div class="container hero-inner">
+      <div class="hero-left">
+        <h1>Welcome to <span class="site-name">NEPALI BAZAR</span></h1>
+        <p class="tagline">Buy, sell, and discover amazing deals locally.</p>
+        <input id="global-search-top" placeholder="Search anything..." class="search-input" />
+      </div>
+      <div class="hero-right">
+        <!-- Pinned product OR fallback RTX ad will be injected by app.js -->
+      </div>
     </div>
   </section>
+
 
   <!-- Main area: featured + grid -->
   <main class="container main-grid">
